objects/SmartStore_Details__c.object
<CustomObject>
    <description>Store info for Order details through Cast Iron.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Resource Center Details</relationshipLabel>
        <relationshipName>SmartStore_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bill_Addr1__c</fullName>
        <label>Bill Addr1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Addr2__c</fullName>
        <label>Bill Addr2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Addr3__c</fullName>
        <label>Bill Addr3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Address__c</fullName>
        <label>Bill Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Attn__c</fullName>
        <label>Bill Attn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_City__c</fullName>
        <label>Bill City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Company__c</fullName>
        <label>Bill Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Country__c</fullName>
        <label>Bill Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_State__c</fullName>
        <label>Bill State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Zip__c</fullName>
        <label>Bill Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchaser_ID__c</fullName>
        <description>LoginID of the user who made this purchase</description>
        <label>Purchaser ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Qty_Ordered__c</fullName>
        <label>Qty Ordered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU_Description__c</fullName>
        <label>SKU Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Addr1__c</fullName>
        <label>Ship Addr1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Addr2__c</fullName>
        <label>Ship Addr2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Addr3__c</fullName>
        <label>Ship Addr3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address__c</fullName>
        <label>Ship Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Attn__c</fullName>
        <label>Ship Attn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City__c</fullName>
        <label>Ship City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Company__c</fullName>
        <label>Ship Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Country__c</fullName>
        <label>Ship Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_State__c</fullName>
        <label>Ship State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip__c</fullName>
        <label>Ship Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Handling_Cost__c</fullName>
        <label>Shipping &amp; Handling Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartStore_ID__c</fullName>
        <label>SmartStore User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Marketing Resource Center</label>
    <nameField>
        <label>Marketing Resource Center Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Resource Centers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>